Hybrid Platform: Introduce PSA APIs broker
Non-secure applications request services to the secure side via standard
PSA API calls.
The implementation of these APIs is selected at build time between either
the TrustZone or the mailbox interface.

In Homogeneous Hybrid Platforms, where NS applications run on both local
and remote processors - and execute a common binary - both interfaces
must be available at the same time, but only one being used, depending on
the execution context.

This patch integrates a runtime redirection to allow the local client
to use the TrustZone path, while the remote clients use the mailbox path.

The component responsible for this redirection is the 'api_broker' which
can be enabled by setting ``TFM_HYBRID_PLATFORM_API_BROKER`` to ``ON``.

Its default value is OFF.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: I3de435192df663dcd62ec24aa90456efcb8603a1

--- a/config/spe_config.cmake.in
+++ b/config/spe_config.cmake.in
@@ -60,6 +60,8 @@ set(TFM_ISOLATION_LEVEL                    @TFM_ISOLATION_LEVEL@            CACH
 set(PLATFORM_DEFAULT_CRYPTO_KEYS           @PLATFORM_DEFAULT_CRYPTO_KEYS@   CACHE BOOL   "Use the default crypto keys")
 set(PLATFORM_DEFAULT_UART_STDOUT           @PLATFORM_DEFAULT_UART_STDOUT@   CACHE BOOL   "Use default uart stdout implementation.")
 
+set(TFM_HYBRID_PLATFORM_API_BROKER         @TFM_HYBRID_PLATFORM_API_BROKER@ CACHE BOOL   "Enable API broker for Hybrid Platforms")
+
 # Other common options
 
 # Coprocessor settings
