Build: Add noreturn attribute to specific functions
Marked the following functions with the __NO_RETURN attribute:
 - tfm_hal_system_reset()
 - tfm_hal_system_halt()
 - tfm_core_panic()

This change:
 - reduces compiler warnings
 - enables better optimizations
 - minimizes false positives in static analysis

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: I50a2bfa10cd73d736dd8b13cd9afb37adc4cf03b

--- a/lib/fih/CMakeLists.txt
+++ b/lib/fih/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(tfm_fih
     PUBLIC
         tfm_fih_headers
         platform_common_interface
+        cmsis
 )
 
 target_compile_definitions(tfm_fih_headers
