BL2: Split keys.c for better maintainability
Separated keys.c into four source files:
- keys.c: Common key handling logic
- keys_builtin.c: Built-in key handling (MCUBOOT_BUILTIN_KEY)
- keys_hw.c: Hardware key handling (MCUBOOT_HW_KEY)
- keys_enc.c: Encrypted key support

This change improves code organization and maintainability by isolating
key handling logic based on the key type.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: I864c28b6dc0d90f9824f5b7581ed41a0003d76a1

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -66,13 +66,25 @@ target_include_directories(bl2
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 )
 
-target_sources(bl2
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/bl2_main.c
-        $<$<BOOL:${PLATFORM_DEFAULT_ROTPK}>:${CMAKE_CURRENT_SOURCE_DIR}/keys.c>
-        ${CMAKE_CURRENT_SOURCE_DIR}/flash_map_extended.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/flash_map_legacy.c
+set(BL2_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/bl2_main.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/flash_map_extended.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/flash_map_legacy.c
+    $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:${CMAKE_CURRENT_SOURCE_DIR}/keys_enc.c>
+
 )
+
+if(PLATFORM_DEFAULT_ROTPK)
+    if(MCUBOOT_BUILTIN_KEY)
+        list(APPEND BL2_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/keys_builtin.c)
+    elseif(MCUBOOT_HW_KEY)
+        list(APPEND BL2_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/keys_hw.c)
+    else()
+        list(APPEND BL2_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/keys.c)
+    endif()
+endif()
+
+target_sources(bl2 PRIVATE ${BL2_SOURCES})
 
 target_compile_definitions(bl2
     PRIVATE
