Build: Fetch TF-PSA-Crypto library v1.0.0
TF-PSA-Crypto is the successor of Mbed TLS 3.x for cryptography,
replacing most mbedtls_xxx APIs with newer psa_xxx APIs. From 4.0
the Mbed TLS project also relies on TF-PSA-Crypto as a submodule.

This patch is the first of a series of patches to perform the migration
from Mbed TLS to TF-PSA-Crypto in TF-M.

Change-Id: I0250cad850f36e9d0b709352aa556c8d0e8d7bbb
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/CMakeLists.txt
+++ b/lib/ext/CMakeLists.txt
@@ -8,6 +8,7 @@ set(FETCHCONTENT_BASE_DIR ${CMAKE_BINARY_DIR}/lib/ext CACHE STRING "" FORCE)
 
 add_subdirectory(qcbor)
 add_subdirectory(mbedcrypto)
+add_subdirectory(tf-psa-crypto)
 add_subdirectory(t_cose)
 add_subdirectory(cmsis)
 if (${PLATFORM_PSA_ADAC_SECURE_DEBUG})
