Build: Simplify GNUARM toolchain
- Removed obsolete version checks
- Extracted MCPU feature control to a separate file for reuse
- Stop using -march for MCU feature selection
- Added -mcpu='' options explicitly to both compile and link
- Removed C++ support from the secure-side toolchain
- Consolidated binary file generation into a single step
- Propagated changes to NS toolchain
- Added stack sealing to Musca-B1
- Remove entry point from toolchain being defined in the linker script

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Iadfff03ab327e6d75ec898cff6c04c4f473f15f5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 #-------------------------------------------------------------------------------
 # SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
-# Copyright (c) 2022 Cypress Semiconductor Corporation (an Infineon company)
-# or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -36,9 +34,6 @@ include(config/post_config.cmake)
 ############################### Compiler configuration #########################
 
 include(${TFM_TOOLCHAIN_FILE})
-
-set(CMAKE_C_COMPILER_FORCED true)
-set(CMAKE_CXX_COMPILER_FORCED true)
 
 project("Trusted Firmware M" VERSION ${TFM_VERSION} LANGUAGES C CXX ASM)
 
@@ -77,4 +72,4 @@ include(${CMAKE_SOURCE_DIR}/config/check_config.cmake)
 
 ################################################################################
 
-include(cmake/install.cmake)
+include(install)
