--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -77,7 +77,7 @@ set(build_sha_256    "$<NOT:${build_sha_384}>")
 set(build_p256m      "$<IF:$<BOOL:${MBEDTLS_P256M_ENABLED}>,$<AND:${is_ec_signature},${is_256_bit_curve}>,0>")
 
 list(APPEND BL2_CRYPTO_SRC
-    $<$<BOOL:${MCUBOOT_USE_PSA_CRYPTO}>:src/thin_psa_crypto_core.c>
+    $<$<BOOL:${MCUBOOT_USE_PSA_CRYPTO}>:${CMAKE_SOURCE_DIR}/lib/ext/thin-psa-crypto-core/thin_psa_crypto_core.c>
     ${MBEDCRYPTO_PATH}/library/platform.c
     ${MBEDCRYPTO_PATH}/library/platform_util.c
     ${MBEDCRYPTO_PATH}/library/memory_buffer_alloc.c
