Tools/SPM: Load SP according to a quantitative priority
In current SPM init, Secure Partitions (SPs) are loaded according to
qualitative priorities set in manifest.
The loading order of Secure Partitions at the same manifest priority
is undefined. A Secure Partition might be loaded before its dependencies
when they have the same manifest priority.
It could crash TF-M sometimes.

Introduce a new SP attribute `load_order` to define the loading order of
SPs in a more fine-grained manner
A SP loading order value is calculated according to its manifest
priorities and dependencies during manifest generation. The value is
also injected into Secure Partitions' `partition_load_info_t` structure.

SPs are loaded by SPM according to the loading order values. A Secure
Partitions with a smaller loading order value is loaded earlier.

It can be guaranteed that:
- Secure Partitions with higher manifest priorities are loaded before
  those with lower manifest priorities.
- A Secure Partition is loaded after its dependencies.

Change-Id: Ib29d6190aaa43f320fc747ab13e40b4f68c4613a
Signed-off-by: David Hu <david.hu2@arm.com>

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -135,6 +135,7 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
         .client_id_base             = {{manifest.client_id_base}},
         .client_id_limit            = {{manifest.client_id_limit}},
 {% endif %}
+        .load_order                 = {{load_order}},
     },
 {% if config_impl['CONFIG_TFM_SPM_BACKEND_IPC'] == '1' or manifest.model == "IPC" %}
     .stack_addr                     = (uintptr_t){{manifest.name|lower}}_stack,
