BL2: Update MCUboot config template for multi sig
Introduce configuration options in mcuboot_config.h.in to enable
building MCUboot with multiple signature support.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: Ic601f6617bcf1a5b857fe31f64aba458e6966f73

--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -33,6 +33,11 @@ extern "C" {
 #define MCUBOOT_USE_FLASH_AREA_GET_SECTORS
 #define MCUBOOT_TARGET_CONFIG "flash_layout.h"
 
+#cmakedefine MCUBOOT_IMAGE_MULTI_SIG_SUPPORT
+
+/*— How many RoTPK keys per image —*/
+#define MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE  @MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE@
+
 #cmakedefine MCUBOOT_HW_ROLLBACK_PROT
 #cmakedefine MCUBOOT_MEASURED_BOOT
 #cmakedefine MCUBOOT_DATA_SHARING
