Crypto: Replace mbedcrypto with tf-psa-crypto library
Update the relevant CMake files to integrate the TF-PSA-Crypto library.

The TF-PSA-Crypto library relies on a single configuration file
(instead of two) to determine which mechanisms are enabled through the
PSA Cryptography API.

Replace the crypto_service_mbedcrypto target with
crypto_service_tfpsacrypto target all over the project.

Rename the MBEDCRYPTO_BUILD_TYPE build option to
TF_PSA_CRYPTO_BUILD_TYPE.

In the Crypto partition's CMake file: remove the conditional logic for
the p256m target (i.e. MBEDTLS_P256M_ENABLED). These internal targets
are always included now in the TF-PSA-Crypto library. The conditional
compilation is entirely handled by the configuration header file and
the current version of <tf-psa-crypto>/scripts/config.py is also unable
to parse correctly TF-M's crypto configuration files.
It is no longer necessary to force defines for the p256m target at this
stage. The issue mentioned in the FixMe comment has already been fixed:
https://github.com/Mbed-TLS/mbedtls/pull/8284.

Change-Id: I8dae6b32bf20d68c4f89fdfbb3452c0d9a9abdba
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/psa-adac/CMakeLists.txt
+++ b/lib/ext/psa-adac/CMakeLists.txt
@@ -6,7 +6,7 @@
 #-------------------------------------------------------------------------------
 
 set(PSA_ADAC_TARGET "trusted-firmware-m")
-set(PSA_ADAC_MBEDTLS_INCLUDE "${MBEDCRYPTO_PATH}/include")
+set(PSA_ADAC_MBEDTLS_INCLUDE "${TF_PSA_CRYPTO_PATH}/include")
 set(PSA_ADAC_TOOLCHAIN    FALSE    CACHE BOOL "Whether to use psa-adac toolchain." FORCE)
 
 fetch_remote_library(
