Crypto: Update crypto configuration profiles
Use single TF-PSA-Crypto configuration file and update to the new
format as described in TF-PSA-Crypto v1.0.0. Merge and update the
default, small, medium and large profile configuration files.

- Remove the deprecated and the redundant MBEDTLS_xxx options.
- Update the entropy configuration:
  Remove MBEDTLS_ENTROPY_C, now it is an internal detail.
  Update configuration to continue using NV seed based entropy source
  (as the default source of entropy).
- Combine client/server configuration files. Previously for client side
  config TF-M used the following files:
  -  A separate PSA Crypto configuration file for the given profile,
  -  The same Mbed TLS configuration file with minimum content.
  For TF-PSA-Crypto use the same config files for client and server
  builds too with the help of a new macro (TFM_PSA_CRYPTO_CLIENT_ONLY).
- Profile small/medium: Only 128-bit keys are used in AES operations
  (MBEDTLS_AES_ONLY_128_BIT_KEY_LENGTH) which requires forcing the
  AES-based CTR_DRBG random generator to use AES-128 instead of AES-256
  (MBEDTLS_PSA_CRYPTO_RNG_STRENGTH),
- Update relevant parts of the documentation.

Change-Id: I4ded87d287ac1b84e6936da50a3b740ecc2b844f
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/config/profile/profile_large.conf
+++ b/config/profile/profile_large.conf
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2023, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -27,9 +27,8 @@ CONFIG_MCUBOOT_FIH_PROFILE_MEDIUM=y
 # Protected Storage
 CONFIG_PS_CRYPTO_AEAD_ALG="PSA_ALG_CCM"
 
-# Mbedcrypto profile
-CONFIG_TFM_MBEDCRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/mbedcrypto_config/tfm_mbedcrypto_config_profile_large.h"
-CONFIG_TFM_MBEDCRYPTO_PSA_CRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/mbedcrypto_config/crypto_config_profile_large.h"
+# TF-PSA-Crypto configuration profile
+CONFIG_TFM_TF_PSA_CRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/tf-psa-crypto/tfpsacrypto_config/crypto_config_profile_large.h"
 
 # TF-M component configs
 
