--- a/config/profile/profile_medium.conf
+++ b/config/profile/profile_medium.conf
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2023, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -24,9 +24,8 @@ CONFIG_TFM_PARTITION_FIRMWARE_UPDATE=n
 # Protected Storage
 CONFIG_PS_CRYPTO_AEAD_ALG="PSA_ALG_CCM"
 
-# Mbedcrypto profile
-CONFIG_TFM_MBEDCRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/mbedcrypto_config/tfm_mbedcrypto_config_profile_medium.h"
-CONFIG_TFM_MBEDCRYPTO_PSA_CRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/mbedcrypto_config/crypto_config_profile_medium.h"
+# TF-PSA-Crypto configuration profile
+CONFIG_TFM_TF_PSA_CRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/tf-psa-crypto/tfpsacrypto_config/crypto_config_profile_medium.h"
 
 # TF-M component configs
 
