--- a/config/profile/profile_small.conf
+++ b/config/profile/profile_small.conf
@@ -1,6 +1,5 @@
-
 #-------------------------------------------------------------------------------
-# Copyright (c) 2023, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -25,8 +24,9 @@ CONFIG_TFM_PARTITION_FIRMWARE_UPDATE=n
 
 # Bootloader
 CONFIG_MCUBOOT_IMAGE_NUMBER=1
-CONFIG_TFM_MBEDCRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/mbedcrypto_config/tfm_mbedcrypto_config_profile_small.h"
-CONFIG_TFM_MBEDCRYPTO_PSA_CRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/mbedcrypto/mbedcrypto_config/crypto_config_profile_small.h"
+
+# TF-PSA-Crypto configuration profile
+CONFIG_TFM_TF_PSA_CRYPTO_CONFIG_PATH="${CMAKE_SOURCE_DIR}/lib/ext/tf-psa-crypto/tfpsacrypto_config/crypto_config_profile_small.h"
 
 # TF-M component configs
 
