Build: Deprecated Musca-S1 and BL5340 platforms
- Musca-S1 (Arm) is now considered obsolete
- BL5340 (Laird Connectivity) is no longer maintained

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: I48e00dc622e9d123f0f794cd01e3b7e7c19857d4

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -93,7 +93,7 @@ if (TFM_PARTITION_CRYPTO)
 
     # FixMe: Secure tests enabled and Debug builds with FP support set to hardware
     #        need to fallback to the legacy driver as the new PSA driver overflows
-    #        the available flash memory on Musca-S1 and Musca-B1
+    #        the available flash memory on Musca-B1
     if ((NOT ${CC312_LEGACY_DRIVER_API_ENABLED}) AND
         TEST_S AND (${CMAKE_BUILD_TYPE} STREQUAL "Debug") AND (${CONFIG_TFM_FLOAT_ABI} STREQUAL "hard"))
         set(CC312_LEGACY_DRIVER_API_ENABLED ON)
